# prod-recsys-project

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CI_CD_README.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERIFICATION.md  DOCUMENTATION_INDEX.md  Dockerfile  Jenkinsfile  LICENSE  NEXT_STEPS_IMPLEMENTATION.md  PROJECT_ANALYSIS_AND_PLAN.md  PROJECT_REVIEW.md  README.md  deploy-all.sh  deployment-ops.md  docker-compose-sonarqube.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  sonar-project.properties  test-data.json  test.txt  validate-deployment.sh
ansible/: ansible.cfg  deploy_jenkins.sh  requirements.txt  site.yml
ansible/group_vars/: all.yml
ansible/inventory/: hosts.ini
ansible/playbooks/: 01_create_jenkins_vm.yml  02_install_docker.yml  03_deploy_jenkins.yml  04_configure_jenkins.yml
app/: README.md  main.py
app/core/: config.py  metrics.py
app/routers/: predict.py
app/schemas/: prediction.py
app/services/: model_service.py  preprocessing_service.py
cap_model/: README.md  requirements.txt
cap_model/notebooks/: 01_eda.ipynb  02_data_processing.ipynb  03_model_training.ipynb  approach_1.ipynb
cap_model/scripts/: download_data.py  run_eda.py  run_preprocessing.py  run_training.py
docs/: 01_Terraform.md  02_terraform_architecture.md  index.md
helm-charts/: deploy.sh
helm-charts/card-approval/: Chart.yaml  README.md  values.yaml
helm-charts/recsys-training/: Chart.yaml  (+1 more)
scripts/: build-and-push.sh  check-costs.sh  monday-startup.sh  morning-mode.sh  night-mode.sh  run_sonar_analysis.sh  setup-github-webhook.sh  test-cicd-flow.sh  weekend-shutdown.sh
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+40 files in other folders)
