[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "card-approval-prediction"
version = "1.0.0"
description = "Card Approval Prediction API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "mlflow==2.9.2",
    "google-cloud-storage==2.10.0",
    "pandas==2.1.3",
    "numpy==1.26.2",
    "scipy>=1.11.0,<2.0.0",
    "scikit-learn==1.3.2",
    "imbalanced-learn>=0.11.0,<1.0.0",
    "xgboost==3.1.2",
    "lightgbm==4.1.0",
    "catboost==1.2.2",
    "joblib==1.3.2",
    "psutil==5.9.1",
    "loguru==0.7.2",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "httpx==0.25.2",
    "python-multipart==0.0.6",
    "setuptools<81",
]

[tool.black]
line-length = 120

include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "env",
]
skips = ["B101", "B601"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=cap_model --cov-report=term-missing --cov-report=html"
